--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
@@ -268,6 +268,6 @@
         </div>
     </div>
     <div class="col-11 text-right kt-padding-t-15" *ngIf="showButton">
-        <kt-button [type]="'button'" [value]="buttonName" (click)="save(buttonName)"></kt-button>
+        <kt-button [type]="'button'" [value]="'Next'" (click)="save(buttonName)"></kt-button>
     </div>
 </div>
