--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.scss
@@ -19,6 +19,9 @@
         padding-left: 10px !important;
     }
     .mat-column-amount{
-        flex: 0 0 17% !important;
+        flex: 0 0 16% !important;
+    }
+    .mat-column-action{
+        flex: 0 0 10% !important;
     }
 }
