--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/disburse/disburse.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="disburseForm">
-    <div class="row justify-content-center">
+    <div class="row kt-padding-l-35 kt-padding-r-35">
         <div class="col-6">
             <div class="row justify-content-center kt-margin-t-10">
                 <div class="col-4 form-label">
@@ -24,18 +24,74 @@
         <div class="col-6">
             <div class="row justify-content-center kt-margin-t-10">
                 <div class="col-4 form-label">
+                    <label class="kt-padding-l-10 mandatory">Secured Scheme</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" class="form-control" formControlName="securedSchemeName">
+                </div>
+            </div>
+        </div>
+
+        <div class="col-6">
+            <div class="row justify-content-center kt-margin-t-10">
+                <div class="col-4 form-label">
+                    <label class="kt-padding-l-10 mandatory">Loan Amount</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" class="form-control" formControlName="securedLoanAmount">
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="row justify-content-center kt-margin-t-10">
+                <div class="col-4 form-label">
                     <label class="kt-padding-l-10 mandatory">Transaction Id</label>
                 </div>
                 <div class="col-8">
-                    <input type="text" class="form-control" formControlName="transactionId"
-                        [class.isError]="controls.transactionId.invalid &&  controls.transactionId.touched">
-                    <mat-error *ngIf="controls.transactionId.touched && controls.transactionId.errors?.required">
+                    <input type="text" class="form-control" formControlName="securedTransactionId"
+                    [class.isError]="controls.securedTransactionId.invalid &&  controls.securedTransactionId.touched">
+                    <mat-error *ngIf="controls.securedTransactionId.touched && controls.securedTransactionId.errors?.required">
                         Required field
                     </mat-error>
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6" *ngIf="details?.isUnsecuredSchemeApplied">
+            <div class="row justify-content-center kt-margin-t-10">
+                <div class="col-4 form-label">
+                    <label class="kt-padding-l-10 mandatory">Unsecured Scheme</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" class="form-control" formControlName="unsecuredSchemeName">
+                </div>
+            </div>
+        </div>
+        <div class="col-6" *ngIf="details?.isUnsecuredSchemeApplied">
+            <div class="row justify-content-center kt-margin-t-10">
+                <div class="col-4 form-label">
+                    <label class="kt-padding-l-10 mandatory">Loan Amount</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" class="form-control" formControlName="unsecuredLoanAmount">
+                </div>
+            </div>
+        </div>
+        <div class="col-6"*ngIf="details?.isUnsecuredSchemeApplied">
+            <div class="row justify-content-center kt-margin-t-10">
+                <div class="col-4 form-label">
+                    <label class="kt-padding-l-10 mandatory">Transaction Id</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" class="form-control" formControlName="unsecuredTransactionId"
+                        [class.isError]="controls.unsecuredTransactionId.invalid &&  controls.unsecuredTransactionId.touched">
+                    <mat-error *ngIf="controls.unsecuredTransactionId.touched && controls.unsecuredTransactionId.errors?.required">
+                        Required field
+                    </mat-error>
+                </div>
+            </div>
+        </div>
+        
+        <!-- <div class="col-6">
             <div class="row justify-content-center kt-margin-t-10">
                 <div class="col-4 form-label">
                     <label class="kt-padding-l-10 mandatory">Loan Amount</label>
@@ -48,7 +104,7 @@
                     </mat-error>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-6">
             <div class="row justify-content-center kt-margin-t-10">
                 <div class="col-4 form-label">
