--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
@@ -11,15 +11,24 @@
                     <th class="transparent">Tenure</th>
                     <th class="transparent">Interest Rate</th>
                     <th class="transparent">Last Payment Date</th>
-                    
+
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="text-gray">Loan!@#$</td>
+                        <td class="text-gray">{{loanDetails?.customerLoan[0]?.loanUniqueId}}
+                            <span *ngIf="loanDetails?.customerLoan[1]">
+                                {{loanDetails?.customerLoan[1]?.loanUniqueId}}
+                            </span>
+                        </td>
                         <td class="text-gray">10000</td>
-                        <td class="text-gray">12,March 2020</td>
-                        <td class="text-gray">Permimun Super Loan</td>
-                        <td class="text-gray">6 Months</td>
+                        <td class="text-gray">{{loanDetails?.loanStartDate | date :'mediumDate'}}</td>
+                        <td class="text-gray">
+                            {{loanDetails?.customerLoan[0]?.scheme?.schemeName | titlecase}}
+                            <span *ngIf="loanDetails?.customerLoan[1]">
+                                {{loanDetails?.customerLoan[1]?.scheme?.schemeName | titlecase}}
+                            </span>
+                        </td>
+                        <td class="text-gray">{{loanDetails?.tenure}} Months</td>
                         <td class="text-gray">5%</td>
                         <td class="text-gray">20,May 2020</td>
                     </tr>
@@ -136,7 +145,7 @@
         </div> -->
 
 
-        
+
         <h5 class="kt-padding-t-20 kt-padding-b-20">Payment Confirmation</h5>
         <div class="table-div">
             <table class="table outer-border">
@@ -167,7 +176,8 @@
                 <kt-button [value]="'Confirm'" [type]="'button'"></kt-button>
                 <span class="kt-padding-5 "></span>
                 <kt-button [value]="'Cancel'" [type]="'reset'"></kt-button>
-                <div class="kt-padding-t-5"> <i>On clicking confirm you will be redirected to available payment options.</i> </div>
+                <div class="kt-padding-t-5"> <i>On clicking confirm you will be redirected to available payment
+                        options.</i> </div>
             </div>
         </div>
 
