bhushan::ornaments modal

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -1,6 +1,7 @@
 <kt-portlet>
     <kt-portlet-body>
-
+        <!-- <kt-button (click)="ornamentsDetails()" [value]="'Ornament Details'" [type]="'button'">
+        </kt-button> -->
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
