--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
@@ -6,11 +6,12 @@
 
     .mat-column-netWeightReleaseOrnament{
         display: flex;
-    flex-direction: column;
+        flex-direction: column;
     }
 
     .mat-column-netWeightRemainingOrnament{
         display: flex;
-    flex-direction: column;
+        flex-direction: column;
+        flex: 0 0 6%;
     }
 }
