--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -428,4 +428,4 @@
         <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
     </div>
 </div>
-<button (click)="addmore()" class="addmore" [disabled]="disable">+ Add More</button>
+<button *ngIf="showAddMoreBtn" (click)="addmore()" class="addmore" [disabled]="disable">+ Add More</button>
