--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
@@ -197,7 +197,7 @@
                                             </td>
                                             <td>{{ totalSelectedOrnamentDetails.ornamentWeight.previousLtv }}</td>
                                             <td>{{ totalSelectedOrnamentDetails.ornamentWeight.currentLtv }}</td>
-                                            <td>{{ totalSelectedOrnamentDetails.ornamentWeight.releaseAmount }}</td>
+                                            <td>{{ totalSelectedOrnamentDetails.ornamentWeight.outstandingAmount }}</td>
                                         </ng-container>
                                     </tr>
                                 </tbody>
