--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -1,6 +1,6 @@
 <kt-portlet>
     <kt-portlet-body>
-        <button (click)="updateStatus()">Update Status</button>
+        <!-- <button (click)="updateStatus()">Update Status</button> -->
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
