Added Reusable upload documents component

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -8,7 +8,7 @@
                         (next)="next($event)" [loanTransfer]="laonTransferDetails"></kt-basic-details>
                     </mat-tab>
                     <mat-tab label="Upload Documents" [disabled]="disabled[1]">
-                        <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" [loanTransfer]="laonTransferDetails" (next)="next($event)"></kt-upload-loan-documents>
+                        <kt-upload-documents [masterAndLoanIds]="masterAndLoanIds" [loanTransfer]="laonTransferDetails" (next)="next($event)"></kt-upload-documents>
                     </mat-tab>
                     <mat-tab *ngxPermissionsOnly="['loanTransferRating']" label="Loan Trasnfer Approval" [formGroup]="approvalForm" [disabled]="disabled[2]">
                         <div class="row justify-content-center">
