--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -55,8 +55,8 @@
                         <!-- </ng-template> -->
                     </mat-tab>
                     <mat-tab label="Upload Documents" *ngIf="url == 'packet-image-upload' || url == 'view-loan'">
-                        <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds"
-                            [loanDocumnets]="customerDetail"></kt-upload-loan-documents>
+                        <kt-upload-documents [masterAndLoanIds]="masterAndLoanIds"
+                            [loanDocumnets]="customerDetail"></kt-upload-documents>
                     </mat-tab>
 
                 </mat-tab-group>
